No pet left behind margin adjust to prevent word wrap onto a 3rd line

--- a/index.css
+++ b/index.css
@@ -326,7 +326,7 @@ label {
     }
 
     h2#leftbehind {
-        margin: 1em;
+        margin: 1em 0.75em;
         margin-bottom: 1.25em;
     }
 
